--- a/member/css/add-task/add-task-components.css
+++ b/member/css/add-task/add-task-components.css
@@ -166,8 +166,8 @@
   border-radius: 10px;
   padding: 0 20px;
   gap: 5px;
-  margin-top: 12px;
-
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 
 .add-task__button--secondary {
